--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                  <a class="button" href="https://wa.me/56963223241"> <img alt="WhatsApp" src="./tren_de_medianoche/whatsapp.png"> +56 9 6322 3241 </a> 
                  <a class="button" href="mailto:bandatrendemedianoche@gmail.com"> <img alt="Correo" src="./tren_de_medianoche/email.png"> bandatrendemedianoche@gmail.com </a> 
                  <a class="button" href="https://www.instagram.com/trendemedianoche_oficial/"> <img alt="Instagram" src="./tren_de_medianoche/instagram-new.png"> Instagram </a> 
-                 <a class="button" href="https://open.spotify.com/intl-es/artist/2ZRyGZfKgNjNKbry4Aqv7J?si=oVDUx2a2ROKxU_K5oKML2w"> <img alt="Spotify" src="./spotify.png"> Spotify </a> 
+                 <a class="button" href="https://open.spotify.com/intl-es/artist/2ZRyGZfKgNjNKbry4Aqv7J?si=oVDUx2a2ROKxU_K5oKML2w"> <img alt="Spotify" src="./tren_de_medianoche/spotify.png"> Spotify </a> 
                  <a class="button" href="https://www.facebook.com/bandaTDMN"> <img alt="Facebook" src="./tren_de_medianoche/facebook-new.png"> Facebook </a> 
                  <a class="button" href="https://www.youtube.com/@trendemedianochechile4904"> <img alt="Youtube" src="./tren_de_medianoche/youtube.png"> Youtube </a> 
                  <button class="copy-button" onclick="copyTransferData()"> <img alt="Copiar" src="./tren_de_medianoche/copy.png"> Copiar Datos de Transferencia </button>
