--- a/index.html
+++ b/index.html
@@ -218,12 +218,6 @@
                </div>
                <div class="name">Tren de Medianoche</div>
                <div class="button-container">
-                  <a class="button" href="https://wa.me/56963223241">
-                     <img alt="WhatsApp" src="./tren_de_medianoche/whatsapp.png"> +56 9 6322 3241 
-                  </a> 
-                  <a class="button" href="mailto:bandatrendemedianoche@gmail.com">
-                     <img alt="Correo" src="./tren_de_medianoche/email.png"> bandatrendemedianoche@gmail.com 
-                  </a> 
                   <a class="button" href="https://www.instagram.com/trendemedianoche_oficial/">
                      <img alt="Instagram" src="./tren_de_medianoche/instagram-new.png"> Instagram 
                   </a> 
@@ -235,6 +229,12 @@
                   </a> 
                   <a class="button" href="https://www.youtube.com/@trendemedianochechile4904">
                      <img alt="Youtube" src="./tren_de_medianoche/youtube.png"> Youtube 
+                  </a> 
+                  <a class="button" href="https://wa.me/56963223241">
+                     <img alt="WhatsApp" src="./tren_de_medianoche/whatsapp.png"> Whatsapp
+                  </a> 
+                  <a class="button" href="mailto:bandatrendemedianoche@gmail.com">
+                     <img alt="Correo" src="./tren_de_medianoche/email.png"> Email
                   </a> 
                   <button class="copy-button" onclick="copyTransferData()"> 
                      <img alt="Copiar" src="./tren_de_medianoche/copy.png"> Copiar Datos de Transferencia 
