--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   <a class="button" href="https://www.facebook.com/bandaTDMN">
                      <img alt="Facebook" src="./tren_de_medianoche/facebook-new.png"> Facebook 
                   </a> 
-                  <a class="button" href="https://youtube.com/@trendemedianochechile4904?feature=shared">
+                  <a class="button" href="https://youtube.com/@trendemedianochechile4904?si=ruAaxUA_FbG6FnFv">
                      <img alt="Youtube" src="./tren_de_medianoche/youtube.png"> Youtube 
                   </a> 
                   <a class="button" href="https://wa.me/56963223241">
