--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <div class="logo"></div>
                   <!-- El logo en sí -->
                </div>
-               <audio controls autoplay loop>
+               <audio autoplay loop controls>
                   <source src="./tren_de_medianoche/sientes_como.mp3" type="audio/mpeg">
                </audio>
                <div class="header-container">
